--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yo-Community Chat box</title>
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src=" https://681d-2409-40d0-2-38e7-9c50-d5ae-4c77-f7b5.in.ngrok.io/socket.io/socket.io.js"></script>
     <script defer src="js/client.js"></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
